--- a/calculator.css
+++ b/calculator.css
@@ -2,17 +2,27 @@ body{
   background-color: black;
   color: white;
   font-family: arial;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.frame{
+  background-color: rgb(30, 30, 30);
+  padding: 15px;
+  border-radius: 15px;
 }
 
 .solution-div{
   display: flex;
   width: 205px; 
   margin-bottom: 10px; 
-  border: solid 0px grey; 
+  border: solid 1px grey; 
   border-radius: 2px; 
   height: 50px;
   align-items: center;
   justify-content: right;
+  overflow-x: hidden;
 }
 
 .calc-value{
@@ -21,7 +31,6 @@ body{
   margin-block-end: 0;
   font-size: 32px;
 }
-
 
 .general-grid{
   display: grid;
@@ -45,9 +54,27 @@ body{
   background-color: rgb(58, 58, 58);
 }
 
+.grey-button:hover{
+  cursor: pointer;
+  background-color: rgb(78, 77, 77);
+}
+
+.grey-button:active{
+  background-color: rgb(99, 98, 98);
+}
+
 .yellow-button{
   background-color: rgb(221, 129, 0);
   font-size: x-large;
+}
+
+.yellow-button:hover{
+  background-color: rgb(239, 153, 33);
+  cursor: pointer;
+}
+
+.yellow-button:active{
+  background-color: rgb(255, 173, 58);
 }
 
 .clear-button{
@@ -55,15 +82,6 @@ body{
   grid-column-end: 3;
 }
 
-button{
-  opacity: .8.5;
-}
 
-button:hover{
-  cursor: pointer;
-  opacity: .9;
-}
 
-button:active{
-  opacity: 1;
-}
+
