--- a/calculator.css
+++ b/calculator.css
@@ -10,16 +10,19 @@ body{
 .frame{
   background-color: rgb(30, 30, 30);
   padding: 15px;
+  border: solid 2px grey;
   border-radius: 15px;
+  transition: all 0.5s;
 }
 
 .solution-div{
   display: flex;
-  width: 205px; 
   margin-bottom: 10px; 
-  border: solid 1px grey; 
-  border-radius: 2px; 
+  padding-right: 5px;
+  border: solid 2px grey; 
+  border-radius: 5px; 
   height: 50px;
+  width: 205px;
   align-items: center;
   justify-content: right;
   overflow-x: hidden;
